# plur

./: .gitignore  README.md  plur.py  pyproject.toml  test.sh  test_plur.py
.github/workflows/: python-package.yml
plur/: __init__.py
