[project]
name = "plur"
version = "1.0.0"
description = "🔢 Simple universal word pluralizer 🔢"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pyupgrade>=3.21.2",
    "ruff",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
branch = true
source = ["plur"]

[tool.coverage.report]
fail_under = "93"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
