[project]
name = "plur"
version = "1.1.0"
description = "🔢 Simple universal word pluralizer 🔢"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pyupgrade>=3.21.2",
    "ruff",
    "ty>=0.0.14",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
branch = true
source = ["plur"]

[tool.coverage.report]
fail_under = "93"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.poetry]
name = "plur"
version = "0.1.0"
description = "🔢 Simple universal word pluralizer 🔢"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
